# spice-circuit-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: BENCHMARKS.md  pyltspice_api.md
docs/example-workflows/: asc-check.yml
src/ltspice_converter/: __init__.py  _shared.py  cli.py  conversion.py  knowledge.py  mcp_server.py  patentability.py  topology.py
src/ltspice_converter/parser/: __init__.py  asc_parser.py  asc_to_schemdraw.py  cir_to_schemdraw.py  netlist_to_asc.py  schemdraw_to_cir.py  schemdraw_to_ltspice.py
src/spice_circuit_lab/: __init__.py
tests/: conftest.py  test_cli.py  test_conversions.py  test_extractor_fixes.py  test_knowledge.py  test_ltspice_backend.py  test_topology.py
tests/fixtures/: README.md
tests/fixtures/bidirectional/: 00_converter_test_horizontal_cap.asc  00_converter_test_horizontal_cap.cir  00_converter_test_parallel_lc.asc  00_converter_test_parallel_lc.cir  00_converter_test_pi_filter.asc  00_converter_test_pi_filter.cir  00_converter_test_rc_lowpass.asc  00_converter_test_rc_lowpass.cir  00_converter_test_rlc_series.asc  00_converter_test_rlc_series.cir  00_converter_test_subckt_diac.cir  00_converter_test_t_filter.asc  00_converter_test_t_filter.cir  00_converter_test_voltage_rc.asc  00_converter_test_voltage_rc.cir
tests/fixtures/converter/01_rc_lowpass/: test_rc_lowpass.asc  test_rc_lowpass.gen.py  test_rc_lowpass.py
tests/fixtures/converter/02_rlc_series/: test_rlc_series.asc  test_rlc_series.gen.py  test_rlc_series.py
tests/fixtures/converter/03_pi_filter/: test_pi_filter.asc  test_pi_filter.gen.py  test_pi_filter.py
tests/fixtures/converter/04_t_filter/: test_t_filter.asc  test_t_filter.gen.py  test_t_filter.py
tests/fixtures/converter/05_parallel_lc/: test_parallel_lc.asc  test_parallel_lc.gen.py  test_parallel_lc.py
tests/fixtures/converter/06_voltage_rc/: test_voltage_rc.asc  test_voltage_rc.gen.py  test_voltage_rc.py
tests/fixtures/converter/07_horizontal_cap/: test_horizontal_cap.asc  test_horizontal_cap.gen.py  test_horizontal_cap.py
tests/fixtures/converter/netlist_to_asc/: test01_rc_lowpass.asc  test01_rc_lowpass.cir  test01_rc_lowpass.gen.py  test02_rlc_series.asc  test02_rlc_series.cir  test02_rlc_series.gen.py  test03_parallel_lc.asc  test03_parallel_lc.cir  test03_parallel_lc.gen.py  test04_pi_filter.asc  test04_pi_filter.cir  test04_pi_filter.gen.py  test05_voltage_rc.asc  test05_voltage_rc.cir  test05_voltage_rc.gen.py  test_netlist_converter.py
