[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-circuit-lab"
version = "0.4.0"
description = "Circuit-aware SPICE/LTspice conversion, validation, and first-pass design helpers"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mitsutoshi Sugahara", email = "ksugahar@ele.kindai.ac.jp"},
]
requires-python = ">=3.10"
keywords = ["ltspice", "spice", "netlist", "schematic", "schemdraw", "eda", "converter", "circuit-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "schemdraw>=0.18",
    "numpy>=1.20",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/ksugahar/spice-circuit-lab"
Issues = "https://github.com/ksugahar/spice-circuit-lab/issues"

[project.scripts]
mcp-spice-circuit-lab = "ltspice_converter.mcp_server:main"
spice-circuit-lab = "ltspice_converter.cli:main"
# Backward-compatible command names.
mcp-ltspice = "ltspice_converter.mcp_server:main"
ltspice-convert = "ltspice_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ltspice_converter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fixtures are demo / round-trip data, not pytest tests; do not collect them.
norecursedirs = ["tests/fixtures", ".venv", "build", "dist"]
